--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Electric Starter App</title>
+    <link rel="stylesheet" href="/mind-meadow.css">
+    <title>Mind Meadow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
