--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/mind-meadow.css">
-    <title>Mind Meadow</title>
+    <title>Meadow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
